Osa 3. Toinen tehtävä

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <body>
   <!--Tee tehtävät tänne-->
+  <h1>Seitsemän veljestä</h1>
+  <h2>Ensimmäinen luku</h3>
+  <p>Juloan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan kylää.</p>
+  <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
+  <em>jatkuu...</em>
+  </p>
 </body>
 
 </html>
