--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <!--Tee tehtävät tänne-->
   <h1>Seitsemän veljestä</h1>
   <h2>Ensimmäinen luku</h3>
-  <p>Juloan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan kylää.</p>
+  <p><strong>Jukolan</strong> talo, eteläisessä <em>Hämeessä</em>, seisoo erään mäen pohjoisella rinteellä, liki <em><strong>Toukolan kylää</strong></em>.</p>
   <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
   <em>jatkuu...</em>
-  </p>
 </body>
 
 </html>
