Osa 3. Viides tehtävä

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <!--Tee tehtävät tänne-->
   <h1>Seitsemän veljestä</h1>
+  <!--Oheinen kuva esittää Seitsemän veljestä-kirjan ensimmäistä sivua-->
+  <img src="assets\seitseman.png" alt="Seitsemän veljestä_kuva" height="498" width="333"/>
   <h2>Tärkeät päähenkilöt</h2>
   <ul>
     <li>Päähenkilöt</li>
