--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lapio website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
   <h2>Ensimmäinen luku</h3>
   <p><strong>Jukolan</strong> talo, eteläisessä <em>Hämeessä</em>, seisoo erään mäen pohjoisella rinteellä, liki <em><strong>Toukolan kylää</strong></em>.</p>
   <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
-  <p><em>jatkuu...</em></p>
+  <p id="punainen-kohta"><em>jatkuu...</em></p>
 </body>
 
 </html>
